alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -739,8 +739,8 @@ html{
    .nav-menu .show{
       display: block;
    }
-   .nav-menu ul li {
-      margin: 2px 10px;
+   .nav-menu ul  li {
+      margin: 2px 0;
       font-size: 0.7rem;
       font-weight: 600;
    }
@@ -748,7 +748,7 @@ html{
    .hero-section--tittle{
       text-align: center;
       position: absolute;
-      top: 45%;
+      top: 28%;
       left: 45%;
       transform: translate(-50%,-50%);
       width: 100%;
